fixed checker findings